--- a/.github/workflows/image_scan.yml
+++ b/.github/workflows/image_scan.yml
@@ -23,8 +23,8 @@ jobs:
         id: docker-login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.andreafnxt }}
+          password: ${{ secrets.dckr_pat_hoy5d6TtvC437hV9ELHcNxKDjqw }}
 
       - name: Build Docker image
         id: build-image
