--- a/.github/workflows/image_scan.yml
+++ b/.github/workflows/image_scan.yml
@@ -1,4 +1,4 @@
-name: Images scanner
+_hubname: Images scanner
 
 on:
   workflow_dispatch:
@@ -23,8 +23,8 @@ jobs:
         id: docker-login
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.andreafnxt }}
-          password: ${{ secrets.dckr_pat_hoy5d6TtvC437hV9ELHcNxKDjqw }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         id: build-image
